[tool.poetry]
name = "pylox"
version = "0.1.0"
description = ""
authors = ["Alex Starche <alex.starche@ni.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
pytest = "^6.2.5"
mypy = "^0.910"

[tool.black]
line-length = 100
target-version = ["py310"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
